public/styles/animate-rank.css
.animate-rank-details-fo {
    overflow: visible;
}

.animate-rank-details {
    position: relative;

    font-family: Arial, Helvetica, sans-serif;

    background-color: #fff;
    box-shadow: 0 5px 11px 0 rgba(0,0,0,.18), 0 4px 15px 0 rgba(0,0,0,.15);

    width: 45vw;

    /* top: -15px; */
    height: auto;

}

.animate-rank-details-title {
    padding: 8px;

    font-size: 13px;
    font-weight: bold;
    color: #4b515d;

    font-family: 'Poppins', sans-serif;

    /* background-color: #4b515d; */
}

.animate-rank-details-authors {
    font-size: 12px;
    font-family: 'Roboto', sans-serif;
    font-weight: 400;

    padding: 8px;
}

@media (max-width: 767.98px) {
    .animate-rank-details {
        width: 87.5vw;
    }
}

